multi-container/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  namespace: traefik
  name: cluster-gateway
spec:
  controllerName: traefik.io/gateway-controller
