multi-container/anti-affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-important
#  namespace: project-tiger
  labels:
    id: very-important
spec:
  replicas: 5
  selector:
    matchLabels:
      id: very-important
  template:
    metadata:
      labels:
        id: very-important
    spec:
      containers:
      - name: container1
        image: nginx
      - name: container2
        image: kubernetes/pause
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: id
                operator: In
                values:
                - very-important
            topologyKey: "kubernetes.io/hostname"
