multi-container/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ngninx
  name: ngninx
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngninx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ngninx
    spec:
      serviceAccountName: kustomization
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
      - name: nginx-2
        image: httpd:alpine
        ports:
        - containerPort: 8080
        resources: {}
status: {}
