multi-container/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    kubernetes.io/hostname: k3d-k8s-home-lab-server-0
  name: pod1
  namespace: default
spec:
  containers:
  - image: httpd:2.4.41-alpine
    name: pod1
    resources: {}
  nodeSelector:
    kubernetes.io/hostname: k3d-k8s-home-lab-server-0
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
