multi-container/svc-acc-pod-dlt.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: debugger
  name: debugger
spec:
  serviceAccountName: kustomization
  containers:
  - image: bitnami/kubectl:latest
    name: debugger
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
