multi-container/remove-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    env: dev
    app: nginx
  name: nginx
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    env: dev
  type: NodePort
status:
  loadBalancer: {}
