multi-container/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: traefik
  name: traefik-gateway
spec:
  gatewayClassName: cluster-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
